# cpp-empty-project

./: CMakeLists.txt
src/Complex/: Complex.cpp  Complex.h
src/main/: main.cpp  unitTest.cpp
src/temp/: traits.hpp
